add problem models for user
